<resources>
    <string name="app_name">HotelApp</string>
    <string name="terms">Al hacer clic en continuar, acepta nuestros Términos de Servicio y Política de Privacidad</string>
    <string name="intro">Introduzca su usuario para iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="grand_hotel">Grand Hotel</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="iniciar_sesion_min">Iniciar sesión</string>
    <string name="contra">Contraseña</string>
    <string name="logueate">Logueate con un usuario</string>
    <string name="action_settings">Opciones</string>
</resources>